// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/columns/Series renders correctly 1`] = `
<td
  className="clickableCell"
  onClick={[Function]}
>
  <div>
    <span>
       
    </span>
    Rallycross
  </div>
  <SeriesModal
    isOpen={false}
    onClose={[Function]}
    ownedTracks={Array []}
    seriesId={345}
  />
</td>
`;

exports[`components/columns/Series renders correctly 2`] = `
<td
  className="clickableCell"
  onClick={[Function]}
>
  <div>
    <span>
       
    </span>
    Rallycross
  </div>
  <SeriesModal
    isOpen={true}
    onClose={[Function]}
    ownedTracks={Array []}
    seriesId={345}
  />
</td>
`;

exports[`components/columns/Series renders correctly 3`] = `
<td
  className="clickableCell"
  onClick={[Function]}
>
  <div>
    <span>
       
    </span>
    Rallycross
  </div>
  <SeriesModal
    isOpen={false}
    onClose={[Function]}
    ownedTracks={Array []}
    seriesId={345}
  />
</td>
`;

exports[`components/columns/Series renders favourite series 1`] = `
<td
  className="clickableCell"
  onClick={[Function]}
>
  <div>
    <StarIcon />
    <span>
       
    </span>
    Rallycross
  </div>
  <SeriesModal
    isOpen={false}
    onClose={[Function]}
    ownedTracks={
      Array [
        123,
      ]
    }
    seriesId={345}
  />
</td>
`;
